# highschool

./: main.py  pyproject.toml  school_province.csv
